...
                            <constraint firstItem="WVw-Iv-rNq" firstAttribute="leading" secondItem="9V6-an-pAM" secondAttribute="leading" id="UR6-dH-WE7"/>
                            <constraint firstItem="Or1-OM-0G4" firstAttribute="top" secondItem="WVw-Iv-rNq" secondAttribute="bottom" id="jqr-sr-lhH"/>
                            <constraint firstAttribute="trailing" secondItem="WVw-Iv-rNq" secondAttribute="trailing" id="pLL-8e-lwX"/>
                            <constraint firstAttribute="trailingMargin" secondItem="Or1-OM-0G4" secondAttribute="trailing" id="yf6-Iv-wJl"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Cities" id="IuV-Bu-yUw"/>
                    <connections>
                        <outlet property="collectionView" destination="Or1-OM-0G4" id="Haa-yL-Ooh"/>
                        <outlet property="errorView" destination="Hw0-Bd-GqQ" id="2HU-m9-i6P"/>
                        <outlet property="searchBarPlaceholder" destination="WVw-Iv-rNq" id="DR7-p4-JIK"/>
                    </connections>
                </viewController>
...
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sk0-eQ-MYT" id="LQ1-Lv-OTb">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="169"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Yy-dy-EjP">
                                                    <rect key="frame" x="8" y="8" width="70" height="30"/>
                                                    <state key="normal" title="Directions"/>
                                                    <connections>
                                                        <action selector="showDirectionsWithSender:" destination="Dr8-Op-Tsq" eventType="touchUpInside" id="2US-Qr-KVc"/>
                                                    </connections>
                                                </button>
                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6Og-F8-kGk">
                                                    <rect key="frame" x="187" y="8" width="180" height="153.5"/>
...
                            <constraint firstItem="6GJ-VM-pIS" firstAttribute="leading" secondItem="Cef-9Z-qaf" secondAttribute="leading" id="fpL-Go-oqJ"/>
                            <constraint firstItem="6GJ-VM-pIS" firstAttribute="top" secondItem="Cef-9Z-qaf" secondAttribute="top" id="mAr-kZ-czF"/>
                            <constraint firstItem="zU3-XA-Lcb" firstAttribute="top" secondItem="6GJ-VM-pIS" secondAttribute="bottom" id="vqJ-Mo-euY"/>
                        </constraints>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Attractions" id="waC-LR-K4n"/>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="tableView" destination="6GJ-VM-pIS" id="oeH-mh-K0i"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="1Ac-OM-a2t" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
